# CSE-260---Parallel-Computation

./: README.md
PA1/: DECLARATION.txt  Makefile  README.md  data.txt  genDATA.sh  teameval.txt
PA1/blislab/: bl_config.h  bl_dgemm_kernel.h  bl_dgemm_ukr.c  my_dgemm.c
PA2/: DECLARATION  teameval.txt
PA2/src_todo_T4/: OPTIONS.txt  mmpy_kernel.cu  mytypes.h
PA3/: CMakeLists.txt  COPYRIGHT  DECLARATION.txt  README.md  teameval.txt
PA3/build_macos/: README.md
PA3/build_wsl/: README.md
PA3/src/: buffers.cpp  buffers.h  compute.cpp  compute.h  controlblock.cpp  controlblock.h  main.cpp  makeslurm.py  obstacle.cpp  obstacle.h  plotter.cpp  plotter.h  stats.cpp  stats.h  stimulus.cpp  stimulus.h
PA3/tests/: N1_expanse-16.slurm  N1_expanse-4.slurm  N1_expanse-8.slurm  N2_expanse-16.slurm  N3_expanse-32.slurm  N4_expanse-128.slurm  N4_expanse-64.slurm  N5_expanse-128.slurm  N5_expanse-256.slurm  N5_expanse-64.slurm  README  makeslurm.py  t1000.config  t2000.config  t500.config  test4000.config  test500.config  test5500.config
